--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
 					function (gltf) {
 					const model = gltf.scene;
 					model.position.copy(reticle.position);
-					model.position.y-=0.2;
-					model.position.z-=0.5;
+					//model.position.y-=0.2;
+					//model.position.z-=0.5;
+						
 					// model.position.x=reticle.position.x;
 					// model.position.y=reticle.position.y;
 					// model.position.x=reticle.position.x;
